# gds

./: README.md
GDP/: gdp.pro
GDP/doc/: lesmeg.txt  testinput.csv
GDP/script/: lesmeg.txt  nsiscript.nsi  run.bat
GDP/src/: gdpmainwindows.cpp  gdpmainwindows.h  main.cpp
GDP/src/fil_versjon/: gdpfilversjon.cpp  gdpfilversjon.h
GDP/testdata/: lesmeg.txt  testinput.csv
GDPKonsoll/: CMakeLists.txt  Makefile  todo.txt
GDPKonsoll/doc/bruksanvisning/: lesmeg.txt
GDPKonsoll/doc/bruksanvisning/src/: bruksanvisning.tex
GDPKonsoll/script/: lesmeg.txt  nsiscript.nsi
GDPKonsoll/src/: Doxyfile  main.c  main.h  rapport.c  rapport.h  util.c  util.h
GDPLib/: Makefile  gdplib.pro
GDPLib/dease/: dease.tar  lesmeg.txt
GDPLib/doc/: lesmeg.txt  lesmeg.txt~
GDPLib/script/: README.TXT  lesmeg.txt  manual.txt  nsiscript.nsi
GDPLib/src/: Doxyfile  Makefile  competition.c  controller.c  diverse.c  diverse.h  gdpl.h  konkurranse.c  konkurranse.h  kontroller.c  kontroller.h  log.c  log.h  main.c  main.h  modell.c  modell.h  par.c  par.h  person.c  person.h  test.c  test.exe.stackdump  test_konkurranse.c  test_kontroller.c  test_modell.c  test_modell.h  test_par.c  test_person.c  util.c
GDPLib/test/: DataEaseResultatrapport.txt  lesmeg.txt  testinput.csv
GDPQtDesktop/: GDPQtDesktop.pro
GDPTest/: lesmeg.txt
GDPTest/src/: test.c  test.h  test_modell.c  test_modell.h
